--- a/environment.yml
+++ b/environment.yml
@@ -5,14 +5,12 @@ dependencies:
   - python
   - numpy
   - pandas
+  - scipy
   - pip
   - matplotlib
-  - plotly
-  - bqplot
   - ipywidgets
-  - bokeh
-  - scipy
-  - pyreadr
-  - plotnine
+  - seaborn
+  - IPython
   - statsmodels
-  - linearmodels
+  - patsy
+  - cv2
